--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <input type="text" id="nomeTarefa" required placeholder="Nome da Tarefa">
             <button type="submit" class="cadastrar">Cadastrar</button>
         </form>
-        <h2 class="sublinhado">Tarefa</h2>
+        <h2 class="sublinhado">Tarefas</h2>
     <ul class="item">
-        <li><del></del></li>
+        <li class="finalizada"></li>
     </ul>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="main.js"></script>
